--- a/app/src/main/res/layout/fragment_alarm_landing_page.xml
+++ b/app/src/main/res/layout/fragment_alarm_landing_page.xml
@@ -1,48 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/weather_bg_gradient"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin">
+    android:paddingBottom="@dimen/activity_vertical_margin">
 
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:alpha="0.3"
-        app:srcCompat="@drawable/ic_alarm_white"
+        android:alpha="0.5"
+        android:padding="@dimen/activity_horizontal_margin"
         android:scaleType="fitCenter"
+        app:srcCompat="@drawable/ic_alarm_white"
         tools:ignore="VectorDrawableCompat" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="@dimen/weather_margin_default"
         android:layout_weight="0"
-        android:orientation="horizontal"
-        android:gravity="fill">
+        android:gravity="fill"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/load_main_activity_btn"
+            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/launch_main_activity"
-            tools:text="Load Main Activity"
-            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
+            android:text="@string/Landing_main_activity"
+            android:textStyle="bold" />
+
+        <Button
+            android:id="@+id/calendar_btn"
+            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/Landing_calendar"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/dismiss_btn"
+            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="@string/dismiss"
-            tools:text="Dismiss"
-            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored" />
+            android:text="@string/Landing_dismiss"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
