--- a/app/src/main/res/layout/list_view_widget.xml
+++ b/app/src/main/res/layout/list_view_widget.xml
@@ -5,13 +5,13 @@
     android:id="@+id/linear"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    android:orientation="vertical"
-    android:padding="@dimen/widget_margin">
+    android:background="@color/colorPrimary"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:gravity="center"
         android:orientation="horizontal">
 
@@ -19,6 +19,7 @@
             android:id="@+id/widget_test_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
             android:text="TextView" />
 
         <LinearLayout
@@ -28,24 +29,24 @@
             android:layout_weight="1"
             android:orientation="horizontal"></LinearLayout>
 
-        <ImageButton
+        <Button
             android:id="@+id/widgetButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="12dp"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:tint="@color/blue"
-            app:srcCompat="@drawable/ic_alarm_add_24dp" />
-
+            android:background="#00FFFFFF"
+            android:text="＋"
+            android:textColor="#302F2F"
+            android:textSize="15sp" />
 
 
     </LinearLayout>
 
     <ListView
         android:id="@+id/widget_listview"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_marginTop="3dp"
         android:background="#ffffff" />
