--- a/app/src/main/res/xml/list_view_widget_info.xml
+++ b/app/src/main/res/xml/list_view_widget_info.xml
@@ -2,9 +2,9 @@
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialKeyguardLayout="@layout/list_view_widget"
     android:initialLayout="@layout/list_view_widget"
-    android:minWidth="40dp"
+    android:minWidth="240dp"
     android:minHeight="40dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/alarm_clock"
     android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="86400000"
     android:widgetCategory="home_screen"></appwidget-provider>
