--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -73,7 +73,7 @@
                     android:layout_height="40dp"
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="12dp"
-                    android:src="@drawable/up2" />
+                    android:src="@drawable/up" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -98,7 +98,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:layout_weight="1"
                         android:text="Touch it!"
                         android:textSize="20sp" />
                 </LinearLayout>
@@ -106,8 +105,7 @@
                 <ImageView
                     android:id="@+id/weatherImage"
                     android:layout_width="70dp"
-                    android:layout_height="70dp"
-                    android:layout_weight="1" />
+                    android:layout_height="70dp"/>
 
             </LinearLayout>
 
